# AdventOfCode

./: .gitignore  Cargo.toml  tide_prompt.fish
.cargo/: config.toml
2015/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs
2016/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs
2017/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs
2022/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs
2023/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs
advent/: Cargo.toml  README.md
advent-helper/: Cargo.toml  README.md
advent-helper/src/: helpers.rs  main.rs  manage_inputs.rs  manage_meta.rs  new.rs  options.rs  printers.rs  run.rs  solution_template.rs  submit.rs  switch.rs  test.rs
advent-helper/src/new/: cargo.rs
advent/src/: lib.rs  options.rs  printers.rs
aoc-rs/: Cargo.toml
aoc-rs/src/: get_data.rs  main.rs
crates/advent/: Cargo.toml
crates/advent/src/: lib.rs  stats.rs  summary.rs
crates/cli/: Cargo.toml
crates/cli/src/: cargo.rs  human.rs  json.rs  main.rs  template.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: crypto.rs  extensions.rs  grid.rs  lib.rs  math.rs  pose.rs  range.rs  rot.rs  vector.rs
prelude/: Cargo.toml
prelude/src/: crypto.rs  iterators.rs  lib.rs  strings.rs  vectors.rs
solns/2015/: 01.rs
solutions/2015/: 01.rs  02.rs  03.rs  04.rs  05.rs
year-2022/: Cargo.toml
year-2022/inputs/: day14-test.txt  day14.txt  day15.txt  day22.txt
year-2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  get_data.rs  grid.rs  helpers.rs  main.rs  standard_parsers.rs
