[workspace]
members = ["advent", "advent-helper", "prelude"]
resolver = "2"

[package]
name = "advent-bins"
version = "0.1.0"
edition = "2021"

[dependencies]
advent = { path = "advent" }

[[bin]]
name = "2015-01"
path = "solutions/2015/01.rs"

[[bin]]
name = "2015-02"
path = "solutions/2015/02.rs"
