[package]
name = "year-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
html2md = "0.2.13"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["cookies", "blocking"] }
