[package]
name = "advent"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
prelude = { path = "../prelude" }
yansi = { workspace = true }
argh = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]
